test/corpus/main.txt
===================================
Tags
===================================
<span>Hello</span>
---

(document
  (element
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name)))))

===================================
Void tag with attributes and stray end
===================================
<input value=yes class="a" data-test></input>
---

(document
  (element
    (void_element
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name))))
  (element
    (erroneous_end_tag
      (erroneous_end_tag_name))))

===================================
Tags with attributes
===================================
<div value=yes class="a" data-💩></div>
---

(document
  (element
    (normal_element
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name))
      (end_tag
        (tag_name)))))

===================================
Nested tags
===================================
<div>
  <span>a</span>
  b
  <b>c</b>
  Multi-line
  text
</div>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (text)
          (end_tag
            (tag_name))))
      (text)
      (element
        (normal_element
          (tag_name)
          (text)
          (end_tag
            (tag_name))))
      (text)
      (end_tag
        (tag_name)))))

==================================
Void tags
==================================
<form><img src="something.png"><br><input type=submit value=Ok /></form>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (void_element
          (tag_name)
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_value)))))
      (element
        (void_element
          (tag_name)))
      (element
        (void_element
          (tag_name)
          (attribute
            (attribute_name)
            (attribute_value))
          (attribute
            (attribute_name)
            (attribute_value))))
      (end_tag
        (tag_name)))))

==================================
Void tags at EOF
==================================
<img src="something.png">
---

(document
  (element
    (void_element
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))))

==================================
Void end tag is erroneous
==================================
<br></br>
---

(document
  (element
    (void_element
      (tag_name)))
  (element
    (erroneous_end_tag
      (erroneous_end_tag_name))))

==================================
Custom tags
==================================
<something:different>
  <atom-text-editor mini>
    Hello
  </atom-text-editor>
</something:different>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (attribute
            (attribute_name))
          (text)
          (end_tag
            (tag_name))))
      (end_tag
        (tag_name)))))

==================================
Comments
==================================
<!-- hello -->
<!-- world ->-> -- > ->->->-- -> still comment -->
<div>
  <!-- <span>something</span> -->
</div>
---

(document
  (comment)
  (comment)
  (element
    (normal_element
      (tag_name)
      (comment)
      (end_tag
        (tag_name)))))

==================================
Comment edge cases
==================================
<!-->
<!--->
<!-- foo --!>
<!-- <!-- nested --> -->
---

(document
  (comment)
  (comment)
  (comment)
  (comment)
  (text))

==================================
Raw text elements
==================================
<script>
  </s
  </sc
  </scr
  </scri
  </scrip
</script>

<style>
  </ </s </st </sty </styl
</style>

<script>
</SCRIPT>

---

(document
  (element
    (script_element
      (start_tag
        (tag_name))
      (raw_text
        (raw_text))
      (end_tag
        (tag_name))))
  (element
    (style_element
      (start_tag
        (tag_name))
      (raw_text
        (raw_text))
      (end_tag
        (tag_name))))
  (element
    (script_element
      (start_tag
        (tag_name))
      (raw_text
        (raw_text))
      (end_tag
        (tag_name)))))

==================================
All-caps doctype
==================================
<!DOCTYPE html PUBLIC
  "-//W3C//DTD XHTML 1.0 Transitional//EN"
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
---

(document
  (doctype))

==================================
Lowercase doctype
==================================
<!doctype html>
---

(document
  (doctype))

==================================
LI elements without close tags
==================================
<ul>
  <li>One
  <li>Two
</ul>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (end_tag
        (tag_name)))))

======================================
DT and DL elements without close tags
======================================
<dl>
  <dt>Coffee
  <dt>Café
  <dd>Black hot drink
  <dt>Milk
  <dd>White cold drink
</dl>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (end_tag
        (tag_name)))))

======================================
P elements without close tags
======================================
<p>One
<div>Two</div>
<p>Three
<p>Four
<h1>Five</h1>
---

(document
  (element
    (normal_element
      (tag_name)
      (text)))
  (element
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name))))
  (element
    (normal_element
      (tag_name)
      (text)))
  (element
    (normal_element
      (tag_name)
      (text)))
  (element
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name)))))

======================================
Ruby annotation elements without close tags
======================================
<ruby>東<rb>京<rt>とう<rt>きょう</ruby>
---

(document
  (element
    (normal_element
      (tag_name)
      (text)
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (element
        (normal_element
          (tag_name)
          (text)))
      (end_tag
        (tag_name)))))

=======================================
COLGROUP elements without end tags
=======================================
<table>
  <colgroup>
    <col style="background-color: #0f0">
    <col span="2">
  <tr>
    <th>Lime</th>
    <th>Lemon</th>
    <th>Orange</th>
  </tr>
</table>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (element
            (void_element
              (tag_name)
              (attribute
                (attribute_name)
                (quoted_attribute_value
                  (attribute_value)))))
          (element
            (void_element
              (tag_name)
              (attribute
                (attribute_name)
                (quoted_attribute_value
                  (attribute_value)))))))
      (element
        (normal_element
          (tag_name)
          (element
            (normal_element
              (tag_name)
              (text)
              (end_tag
                (tag_name))))
          (element
            (normal_element
              (tag_name)
              (text)
              (end_tag
                (tag_name))))
          (element
            (normal_element
              (tag_name)
              (text)
              (end_tag
                (tag_name))))
          (end_tag
            (tag_name))))
      (end_tag
        (tag_name)))))

=========================================
TR, TD, and TH elements without end tags
=========================================
<table>
  <tr>
    <th>One
    <th>Two
  <tr>
    <td>Three
    <td>Four
</table>
---

(document
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name)
          (element
            (normal_element
              (tag_name)
              (text)))
          (element
            (normal_element
              (tag_name)
              (text)))))
      (element
        (normal_element
          (tag_name)
          (element
            (normal_element
              (tag_name)
              (text)))
          (element
            (normal_element
              (tag_name)
              (text)))))
      (end_tag
        (tag_name)))))

==============================
Named entities in tag contents
==============================

<p>Lorem ipsum &nbsp; dolor sit &copy; amet.</p>
---

(document
  (element
    (normal_element
      (tag_name)
      (text
        (entity)
        (entity))
      (end_tag
        (tag_name)))))

================================
Numeric entities in tag contents
================================

<p>Lorem ipsum &#160; dolor sit &#8212; amet.</p>
---

(document
  (element
    (normal_element
      (tag_name)
      (text
        (entity)
        (entity))
      (end_tag
        (tag_name)))))

=================================
Multiple entities in tag contents
=================================

<p>Lorem ipsum &#xA0; dolor &#xa0; sit &nbsp; amet.</p>
---

(document
  (element
    (normal_element
      (tag_name)
      (text
        (entity)
        (entity)
        (entity))
      (end_tag
        (tag_name)))))

==================================
Omitted end tags for html and head
==================================

<!doctype html><html><head>

---

(document
  (doctype)
  (element
    (normal_element
      (tag_name)
      (element
        (normal_element
          (tag_name))))))

==================================
RCDATA title
==================================
<title>1 < 2</title>
---

(document
  (element
    (rcdata_element
      (start_tag
        (tag_name))
      (rcdata_text)
      (end_tag
        (tag_name)))))

==================================
RCDATA textarea
==================================
<textarea><b></textarea>
---

(document
  (element
    (rcdata_element
      (start_tag
        (tag_name))
      (rcdata_text)
      (end_tag
        (tag_name)))))

==================================
RCDATA entities
==================================
<title>1 < 2 &amp; 3</title>
---

(document
  (element
    (rcdata_element
      (start_tag
        (tag_name))
      (rcdata_text)
      (end_tag
        (tag_name)))))

==================================
Plaintext
==================================
<plaintext><b>
---

(document
  (element
    (plaintext_element
      (start_tag
        (tag_name))
      (plaintext_text))))

==================================
Plaintext with closing tag
==================================
<plaintext><b></plaintext>
---

(document
  (element
    (plaintext_element
      (start_tag
        (tag_name))
      (plaintext_text))))

==================================
Slash-terminated HTML tag
==================================
<div/>
---

(document
  (element
    (normal_element
      (tag_name))))

==================================
HTML slash terminator
==================================
<div/>text</div>
---

(document
  (element
    (normal_element
      (tag_name)
      (text)
      (end_tag
        (tag_name)))))

==================================
Foreign content self-close
==================================
<svg><path/></svg>
---

(document
  (element
    (foreign_element
      (tag_name)
      (element
        (foreign_element
          (tag_name)))
      (end_tag
        (tag_name)))))

==================================
Foreign case-sensitive names
==================================
<svg><linearGradient></linearGradient></svg>
---

(document
  (element
    (foreign_element
      (tag_name)
      (element
        (foreign_element
          (tag_name)
          (end_tag
            (tag_name))))
      (end_tag
        (tag_name)))))

==================================
Foreign content
==================================
<svg><path/><linearGradient></linearGradient></svg>
---

(document
  (element
    (foreign_element
      (tag_name)
      (element
        (foreign_element
          (tag_name)))
      (element
        (foreign_element
          (tag_name)
          (end_tag
            (tag_name))))
      (end_tag
        (tag_name)))))
